package com.fligght.beans;

public enum CabineClass {
    Economy,
    PremiumEconomy,
    BusinessClass,
    FirstClass,
    OTHER
}
