@startuml Vols
class Flight{
    - flightnumber : int 
    - aircraft : Aircraft
    - departureInfo : DepartureArrivalInfo
    - arrivalInfo : DepartureArrivalInfo
    - price : float
}
class DepartureArrivalInfo{
    - day : string
    - time : Date
    - airport : Airpot
}
class Reservation{
    -int ID
    -date dateReservation
    -time heureReservation
}
class Client{
    -int ID
    -String nom
    -String prenom
    -String numeroPassport
}
class Airport{
    - id : int
    - code : string
    - city : City
}
class City{
    -String nom
    -Pays pay
}
class Cabine{
    - cabineClass : CabineClasses
    - capacity : int
    - availablePlaces : int
}
enum CabineClasses{
    Economy
    PremiumEconomy
    BusinessClass
    FirstClass
}
class Aircraft{
    cabines : ArrayList<Cabine>
}
class Pays{
    -int ID
    -String nom
}

Flight "1" -- "0..*" Reservation :concerne 
Client "1" -- "0..*" Reservation :effectue 
Flight "1..*" -- "1" Aircraft :concern
City "1..*" -- "0..*" Airport :represente
City "1..*" -- "1" Pays :se trouve
Flight --* DepartureArrivalInfo
DepartureArrivalInfo -- Airport : "Depart"
Airport -- DepartureArrivalInfo : "Arrivee"
Aircraft -- Cabine : "have"
Cabine -- CabineClasses : "is"
@enduml